# kratos-discover

./: .dockerignore  .gitignore  Dockerfile  README.md  README.md.backup  cli.py  conftest.py  docker-compose.yml  prompt_registry.py  pyproject.toml  requirements.txt  run_commands.txt  run_tests.py  setup.py
agent1/models/: chunks.py  input.py
agent1/nodes/: preprocessor.py
agent1/parsers/: docx_parser.py  xlsx_parser.py
cache/schemas/: docx.json  test_tool_unique.json
context-files/: Eval_build_prompt.md  FDIC_370_GRC_Library_National_Bank.docx  agent1_build_prompt_v1  windsurf_agent_feedback.md
dashboard/: data.json  index.html  package-lock.json  package.json  server.js  sync-outputs.ps1  tailwind.config.js  vite.config.js
dashboard/public/: outputs-manifest.json
dashboard/src/: Dashboard.jsx  index.css  main.jsx
prompts/: registry.yaml
prompts/rule_extraction/: v1.1.yaml  v1.2.yaml
rule-agent/: README.md  cli.py  prompt_registry.py  requirements.txt  rule_agent.py
src/: cli.py  pipeline_runner.py  rule_agent.py
src/agent1/: exceptions.py
tests/: conftest.py  test_agent1_preprocessor.py  test_cli.py  test_prompt_registry.py  test_rule_agent.py
v1/: README.md  agent-discover-prompt-v1.0.yaml
wiki/: API-Reference.md  Architecture.md  Configuration.md  Deployment-Guide.md  Development-Guide.md  Home.md  Installation-Guide.md  Phase1-Atomizer-Agent.md  Phase1-Confidence-Scorer.md  Phase1-Eval.md  Phase1-GRC-Extractor.md  Phase1-Parse-and-Chunk.md  Phase1-Router.md  Phase1-Schema-Discovery-Agent.md  README.md  Troubleshooting.md  Usage-Guide.md
(+110 files in other folders)
